--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   video_player: ^2.8.2
   image_picker: ^1.0.7
   intl: ^0.18.1
-  permission_handler: ^11.2.1
+  package_info_plus: ^5.0.1
 
 dev_dependencies:
   flutter_test:
